applications/base/home-hud/home-hud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-hud
  namespace: home-hud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-hud
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: home-hud
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: home-hud
          image: harbor.local.abbottland.io/library/home-hud:20261007-67-4a0e7a2 # {"$imagepolicy": "flux-system:home-hud"}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              memory: 256Mi
