applications/base/home-hud/video-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-api
  namespace: home-hud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: video-api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: video-api
          image: harbor.local.abbottland.io/library/video-api:20261010-69-8da09bf # {"$imagepolicy": "flux-system:video-api"}
          imagePullPolicy: Always
          ports:
            - containerPort: 4002
          livenessProbe:
            httpGet:
              path: /healthz
              port: 4002
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /readyz
              port: 4002
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: media
              mountPath: /media
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              memory: 256Mi
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
