applications/base/home-hud/home-hud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-hud
  namespace: home-hud
spec:
  selector:
    app: home-hud
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
