applications/base/home-hud/video-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-api
  namespace: home-hud
  labels:
    app: video-api
spec:
  selector:
    app: video-api
  ports:
    - name: http
      port: 4002
      targetPort: 4002
  type: ClusterIP
