applications/base/home-hud/video-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-worker
  namespace: home-hud
spec:
  selector:
    app: video-worker
  ports:
    - port: 4003
      targetPort: 4003
  type: ClusterIP
