applications/base/home-hud/video-api-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: video-api
  namespace: home-hud
spec:
  podSelector:
    matchLabels:
      app: video-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - port: 4002
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: home-hud
          podSelector:
            matchLabels:
              app: home-hud
      ports:
        - port: 4002
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 192.168.4.124/32
      ports:
        - port: 5432
          protocol: TCP
